# wiggle-touch

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/wiggle_touch/: data_images.py  data_menu.py  display.py  images.py  install.py  main.py  menu.py  screen.py  screen_images.py  screen_live.py  screen_menu.py  screen_picture.py  test.py
src/wiggle_touch/lib/: LCD_2inch.py  adafruit_alternative.py  lcdconfig.py
src/wiggle_touch/service/: wiggle-touch-boot.sh  wiggle-touch.service  wiggle_touch.service  wiggle_touch_boot.sh
