[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "touch_wigglebin"
version = "0.0.1"
authors = [
  { name="Studio Rabota" },
]
description = "WiggleTouch - Analog interface for WiggleR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'spidev',
  'Pillow',
  'numpy',
  'watchdog'
]

[project.scripts]
wiggle_touch = "wiggle_touch.main:main"
wiggle_touch_install = "wiggle_touch.install:install"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-touch.git"